# clinical_ner_benchmark

./: .env.sample  .gitignore  README.md  pyproject.toml
clinical_ner/: benchmarks.py  leaderboard.py  testing.ipynb
clinical_ner.egg-info/: top_level.txt
clinical_ner/evaluation/: __init__.py  evaluators.py  metrics.py  ner_utils.py  results_dataclasses.py  utils.py
clinical_ner/models/: __init__.py  api_decoder_models.py  external_services.py  extractor_base.py  gliner_extractor.py  hf_extractor.py  llm_api_extractor.py  llm_client.py  mixins.py  model_loader.py  model_output_dataclass.py  prompt_templates.py  span_dataclasses.py  utils.py
clinical_ner/models/output_parsers/: __init__.py  html_span_parser.py  list_parsers.py  output_parser.py  parsed_output_dataclass.py
clinical_ner/tasks/: __init__.py  base_tasks.py  dataset_loader.py  ner_dataset_loader.py  ner_tasks.py  prepare_dataset.py
clinical_ner/tasks/ner/: __init__.py  ner_datasets.py
data/inputs/configs/EmergentMethods/gliner_large_news-v2.1/: config.json
data/inputs/configs/alvaroalon2/biobert_diseases_ner/: config.json
data/inputs/configs/bioformers/bioformer-8L-ncbi-disease/: config.json
data/inputs/inference_configs/EmergentMethods/gliner_large_news-v2.1/: config.json
data/inputs/inference_configs/Universal-NER/UniNER-7B-all/: config.json
data/inputs/inference_configs/Universal-NER/UniNER-7B-type/: config.json
data/inputs/inference_configs/Universal-NER/UniNER-7B-type-sup/: config.json
data/inputs/inference_configs/alvaroalon2/biobert_diseases_ner/: config.json
data/inputs/inference_configs/bioformers/bioformer-8L-ncbi-disease/: config.json
data/inputs/inference_configs/numind/NuNER_Zero-span/: config.json
data/inputs/prompt_templates/: llama_70B_ner.jinja  llama_70B_ner_v0.1.jinja  llama_70B_ner_v0.2.jinja  llama_70B_ner_v0.3.jinja  llm_html_highlighted_spans.jinja  llm_html_highlighted_spans_v1.jinja  llm_ner_v0.1.jinja  mixtral_ner_v0.3.jinja  universal_ner.jinja
docs/: abstractions.md  custom_model_implementation.md  reproducing_results.md  submit_to_leaderboard.md
medics_ner/: benchmarks.py  testing.ipynb
medics_ner/evaluation/: __init__.py  evaluators.py  metrics.py  ner_evaluation_utils.py  ner_utils.py
medics_ner/models/: __init__.py  extractor_base.py  hf_extractor.py  model_loader.py
medics_ner/tasks/: __init__.py  base_tasks.py  dataset_loader.py
medics_ner/tasks/ner/: __init__.py  ner_datasets.py
notebooks/: reproducing_results.ipynb
src/: testing.ipynb
src/models/: extractor_base.py  gliner_extractor.py  hf_extractor.py  model_loader.py  utils.py
(+9 files in other folders)
