[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical_ner"
version = "0.0.1"
description = "Clinical benchmark for medical NER"
readme = "README.md"
authors = [
    { name = "MEDICS Contributors", email = "wadood3003@gmail.com" },
]
# license = { file = "LICENSE" }
keywords = ["medicine", "nlp", "ner", "benchmark"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
    "transformers==4.40.1",
    "gliner==0.2.4",
    "datasets==2.19.0",
    "pandas==2.1.4",
    "nervaluate==0.1.8",
    "bioc==2.1",
    "langchain==0.2.6",
    "openai==1.30.5",
    "python-dotenv==1.0.1",
    "google-generativeai 0.7.2"
]


[project.urls]
homepage = "https://github.com/WadoodAbdul/clinical_ner_benchmark"
"Leaderboard" = "https://huggingface.co/spaces/m42-health/clinical_ner_leaderboard"
"Source Code" = "https://github.com/WadoodAbdul/clinical_ner_benchmark"

[tool.setuptools.packages.find]
exclude = ["data", "results"]